Change project structure

--- a/views/index.html
+++ b/views/index.html
@@ -33,14 +33,14 @@
             border-radius: .25rem;
         }
     </style>
-    <script src="../javascript/copy.js"></script>
+    <script src="../public/javascript/copy.js"></script>
 </head>
 <body>
 
 <div class="container">
    <div class="content">
        <h1>Successfully authenticated!</h1>
-       <p>The next step is pasting the following information into your <code>Variables.inc</code> file that just opened up!
+       <p>The next step is pasting the following information into your <code>Tokens.inc</code> file that just opened up!
        </p>
        <h3>Access token:</h3>
        <div class="btn-group">
@@ -54,7 +54,7 @@
                </svg>
            </button>
        </div>
-       <p class="mt-1">Paste the access token behind <code>ACCESS_TOKEN=</code> in  <code>Variables.inc</code>.</p>
+       <p class="mt-1">Paste the access token behind <code>ACCESS_TOKEN=</code> in  <code>Tokens.inc</code>.</p>
        <h3>Refresh token:</h3>
        <div class="btn-group">
            <div class="btn btn-secondary">refresh_token</div>
@@ -67,7 +67,7 @@
                </svg>
            </button>
        </div>
-       <p class="mt-1">Paste the refresh token behind <code>REFRESH_TOKEN=</code> in  <code>Variables.inc</code>.</p>
+       <p class="mt-1">Paste the refresh token behind <code>REFRESH_TOKEN=</code> in  <code>Tokens.inc</code>.</p>
    </div>
 </div>
 
